lab1/Test/L1-A-13-62.output
Error Type A at Line 2
Error Type A at Line 8
Error Type B at Line 13
Error Type B at Line 15
Error Type A at Line 17
Error Type B at Line 19
Error Type B at Line 21
Error Type B at Line 25
Error Type A at Line 26
Error Type A at Line 29
Error Type B at Line 31
Error Type B at Line 33
