lab1/Test/L1-A-13-62.cmm
float uqFNm ( int rK3XG , struct b3YGM0UVM ZOrUwTk8bIVJaqo6c 
  [ 713792593 `] ) {
}
struct n9D_anCP1zh {
  struct JdGyYeCd giLYf = CWs > oQ6_Dl2F6 + NvbkeT 
    * - ! r1wFtOkV7ummc3 [ A7rVEU = Dh18Ucj4U3s8K2xPFnYd 
    = lCbmk4sCRNSNSlTHBBdx || ZV5BA8G3giwLBBOE && IzXaXKXY 
    == cv3q0UQrmrWi - PFj / ( ^tz6dsAo != - tN9m5Mzi1VMyq 
    ( HGzj3WN_ ( xGJHgOCr1exX , zSSC ) >= ! ( - c1L9DXeI 
    * ! yWwKx < W9ftC3D ) * ( Ywsn ) / X && ! eOI0ASN 
    < 1549973785.1937003271 >= - 524885386 <= - - ! Aj5eEnKy45Lgg 
    ) || PT ( ) ) . m ] ;
;}CG8Anrpwvsp8rAFKxe5 
;
) int TL8hP27lbh3NdLA ( ) {
  VWuEMZyoXqTQDOR38 ;
  dBsmpB \;
  Zojh9DYslP8sM ;
  if VbS4zOpgQHzSG )   iMyd ;
else   while ( kw6_0zOl4 )   {
  }> 


  if ( SzB8sgjE8w69Vhn8cW )   z6pfp4fbT4 ;
else   if ( nzxa1d6IZFkG5  )   return ZoaAOre97cZEbOWtC 
    ;\


%}
struct {
  int T8bbszas1c83 2040558243 ;
  int OMry , IObKqmnWLARNdKpqcs4O 
};
int ;
int ;
int sWYjpLoKCe2KvgTx2WJi , X7THwZXCi 

;
